--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           duration: duration,
         });
 
-        trackline.createTrack().createTrackEvent( { start: 1, end: 5 } );
-        trackline.createTrack().createTrackEvent( { start: 0, end: 2 } );
-        trackline.createTrack().createTrackEvent( { start: 4, end: 7 } );
+        trackline.createTrack('Track1').createTrackEvent( { start: 1, end: 5 } );
+        trackline.createTrack('Track2').createTrackEvent( { start: 0, end: 2 } );
+        trackline.createTrack('Track3').createTrackEvent( { start: 4, end: 7 } );
         trackline.createTrack();
 
         var elems = document.getElementsByClassName('droppable');
