Added event labels.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           duration: duration,
         });
 
-        trackline.createTrack('Track1').createTrackEvent( { start: 1, end: 5 } );
+        trackline.createTrack('Track1').createTrackEvent( { start: 1, end: 5, label: 'awesome' } );
         trackline.createTrack('Track2').createTrackEvent( { start: 0, end: 2 } );
         trackline.createTrack('Track3').createTrackEvent( { start: 4, end: 7 } );
         trackline.createTrack();
