--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
           scale: 100, //pixels
           duration: duration,
           dynamicTrackCreation: true,
+          restrictToKnownPlugins: true,
         });
 
         trackline.createTrack('Track1').createTrackEvent( { start: 1, end: 5, label: 'awesome' } );
@@ -43,8 +44,8 @@
     <div id="container" style="height: 50%;">
     </div>
     <div id="droppables">
-      <div class="droppable" data-trackliner-type="default">Droppable 1</div>
-      <div class="droppable" data-trackliner-type="default">Droppable 2</div>
+      <div class="droppable" data-trackliner-type="default">Should Work</div>
+      <div class="droppable" data-trackliner-type="default2">Shouldn't Work</div>
     </div>
   </body>
 </html>
