--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
           restrictToKnownPlugins: true,
         });
 
-        trackline.createTrack('Track1').createTrackEvent( { start: 1, end: 5, label: 'awesome' } );
-        trackline.createTrack('Track2').createTrackEvent( { start: 0, end: 2 } );
-        trackline.createTrack('Track3').createTrackEvent( { start: 4, end: 7 } );
+        trackline.createTrack('Track1').createTrackEvent( 'default', { start: 1, end: 5, label: 'awesome', className: 'test' } );
+        trackline.createTrack('Track2').createTrackEvent( 'default', { start: 0, end: 2 } );
+        trackline.createTrack('Track3').createTrackEvent( 'default', { start: 4, end: 7 } );
         trackline.createTrack();
 
         var elems = document.getElementsByClassName('droppable');
@@ -37,6 +37,10 @@
     <style>
       .droppable {
         cursor: pointer;
+      }
+
+      .test {
+        font: 10pt Helvetica;
       }
     </style>
   </head>
