--- a/test/index.html
+++ b/test/index.html
@@ -3,14 +3,14 @@
 <head>
   <title>Popcorn API</title>
   <link rel="stylesheet" href="qunit/qunit.css" type="text/css" media="screen">
-  <script src="../external/jquery.js"></script>
-  <script src="../external/jquery-ui.js"></script>
-  <link rel="stylesheet" type="text/css" href="../external/jquery-ui.css"/>
+  <script src="../lib/jquery.js"></script>
+  <script src="../lib/jquery-ui.js"></script>
+  <link rel="stylesheet" type="text/css" href="../lib/jquery-ui.css"/>
 
   <script src="qunit/qunit.js"></script>
 
-  <link rel="stylesheet" href="../trackLiner.css" type="text/css" media="screen">
-  <script src="../trackLiner.js"></script>
+  <link rel="stylesheet" href="../css/trackliner.css" type="text/css" media="screen">
+  <script src="../js/loader.js"></script>
   <script src="trackliner.unit.js"></script>
 </head>
 <body>
